--- a/src/site/notes/Calendrier/Semaines/2024-30.md
+++ b/src/site/notes/Calendrier/Semaines/2024-30.md
@@ -10,71 +10,58 @@
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
-## Segment 1 & 2 : Cinéma & Séries TV
 
-### 🍿 Cette Semaine, J'ai Vu
+# Sommaire De L'épisode
 
-| File                                                                                                                                                                                                                 | rating | review                                                                                                                                                       |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| [[Sources/Ce que j'ai vu/Create Pixel Art In Affinity Designer\|Create Pixel Art In Affinity Designer]]                                                                                                           | 🟢     | une vidéo assez sympa sur comment passé d'un dessin à un pixel art.                                                                                          |
-| [[Sources/Ce que j'ai vu/Everything you need to know about Pixel Art!  Pixel Art Tutorial\|Everything you need to know about Pixel Art!  Pixel Art Tutorial]]                                                     | 🟢     | POur moi qui suis grand débutant en pixel art j'ai bien aimé les tips qui sont partagés ici                                                                  |
-| [[Sources/Ce que j'ai vu/Learn Any Pixel Art Style like a Professional Artist - Tips & Tricks\|Learn Any Pixel Art Style like a Professional Artist - Tips & Tricks]]                                             | 🟢     | Des conseils que j'ai trouvés utile pour commencer le pixel art, le fait de s'inspirer et de tenter différentes variations de style afin de trouver le sien. |
-| [[Sources/Ce que j'ai vu/Pixel Art Character Design Tutorial - Step By Step!\|Pixel Art Character Design Tutorial - Step By Step!]]                                                                               | 🟢     | Une vidéo tuto qui m'a beaucoup parlé sur les personnages en pixel art et notament que le silhouette doit pouvoir directement être reconnaissable.           |
-| [[Sources/Ce que j'ai vu/Pixel Grid (Affinity Designer)\|Pixel Grid (Affinity Designer)]]                                                                                                                         | 🟢     | Découverte de ces fonctions sur Affinity Designer très content de découvrir que j'ai déjà un outil pour me lancer dans le pixel art.                         |
-| [[Sources/Ce que j'ai vu/James chez les bizarroïdes (Série télévisée 2022–2023) ⭐ 6.3  Animation, Aventure, Comédie\|James chez les bizarroïdes (Série télévisée 2022–2023) ⭐ 6.3  Animation, Aventure, Comédie]] | 🟡     | Je ne sais pas trop pourausoi j'ai zappé sur cette série, j'ai vu quelques épisodes c'est assez étrange. Pour l'instant c'est tout ce que je peux en dire.   |
+---
+🍿 Cette semaine, j'ai vu :
 
-{ .block-language-dataview}
-
-## Segment 3 : Culture Littéraire & Articles
-
-### 📚 Cette Semaine, J'ai Lu
-
-| File                                                                                                       | rating | review                                                                                                                                                                                                                                                                                                                             |
-| ---------------------------------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai lu/📓 Zettelkasten Revisited\|📓 Zettelkasten Revisited]]                         | 🟢     | Uné resumé sur ettelkasten qui résonne pas mal avec là où j'en suis de la gestion de mon PKM. Avoir un but à ces notes pour les montrer, faire son système piur qu'il fonctionne pour soi en s'inspirant de ce qui se fait, c'ets chaotique mais les liens que vous allez faire vont vous permettre de retrouver les informations. |
-| [[Sources/Ce que j'ai lu/Construire un second cerveau\|Construire un second cerveau]]                   | 🟢     | En cours de lecture, c'est de là que vient l'idée de partager les livres en cours de lecture et le fait que je lise comme un anglais du début des temps moderne.                                                                                                                                                                   |
-| [[Sources/Ce que j'ai lu/Dense Discovery – Issue 298\|Dense Discovery – Issue 298]]                     | 🟢     | Une réflexion sur la surexposition voulue ou non aux informations continue. Faire attention à ce qu'on regarde même quand c'est présenté apolitique. Après tout être apolitique veut juste dire que la politique actuellement en place vous convient.                                                                              |
-| [[Sources/Ce que j'ai lu/Fundamentals of Adventure Game Design\|Fundamentals of Adventure Game Design]] | 🟢     | Un livre que je prends plaisir à lire et que je trouve très intéressant de par les conseils et la liste de jeu en exemple.                                                                                                                                                                                                         |
-| [[Sources/Ce que j'ai lu/Le Cycle de Providence\|Le Cycle de Providence]]                               | 🟢     | Dans le but de mieux appréhender la gestion de l'horreur lovecraftienne dans mes projets en cours, je relis l'intégrale. Des nouvelles que j'aime toujours autant, d'autre un peu moins, mais dans l'ensemble ce tome autour de providence est quand même très bon.                                                                |
-| [[Sources/Ce que j'ai lu/Stealing Cthulhu\|Stealing Cthulhu]]                                           | 🟢     | en lien avec mes projets de [[Sources/JDR/JDR\|JDR]] je me plonge dans ce livre qui analyse justement l'horreur lovecraftienne dans l'angle de la mise en place de scénario de jeu de rôle. Il y a vraiment beaucoup d'inspiration et de conseils qui sont assez denses à digérer, mais qui me parlent énormément.                 |
+- ``- [James chez les bizarroïdes (Série télévisée 2022–2023) ⭐ 6.3  Animation, Aventure, Comédie](https://www.imdb.com/title/tt21107718/?language=fr-fr) ``
+- ``- [Create Pixel Art In Affinity Designer](https://www.youtube.com/watch?v=REeAVe8QWK0) ``
+- ``- [Everything you need to know about Pixel Art!  Pixel Art Tutorial](https://www.youtube.com/watch?v=TD5Rp__T668) ``
+- ``- [Learn Any Pixel Art Style like a Professional Artist - Tips & Tricks](https://www.youtube.com/watch?v=vJgkAve9Wis) ``
+- ``- [Pixel Art Character Design Tutorial - Step By Step!](https://www.youtube.com/watch?v=vXm5VjZA4Ys) ``
+- ``- [Pixel Grid (Affinity Designer)](https://www.youtube.com/watch?v=R457ABIv80U) ``
 
 { .block-language-dataview}
 
-## Segment 4 : Podcasts Et Musiques
+---
+📚 Cette semaine, j'ai lu :
 
-### 🎧 Cette Semaine, J'ai Écouté
-
-| File                                                                                                                                                                       | rating | review                                                                                                                                                   |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai écouté/Tech Café - [flash ⏱️] Crowdstrike  panne mondiale - Podcast Addict\|Tech Café - [flash ⏱️] Crowdstrike  panne mondiale - Podcast Addict]] | 🟢     | Petit tour d'horizon sur la grosse panne mondiale de Microsoft, du pourquoi et on essaye de comprendrE.                                                  |
-| [[Sources/Ce que j'ai écouté/Tech Café - La galaxie Samsung - Podcast Addict\|Tech Café - La galaxie Samsung - Podcast Addict]]                                         | 🟢     | Pas mal de choses dans cette épisode et justement un peu d'impact politique entre apple, musk, trump comment la politique impacte la tech et vice versa. |
-
-{ .block-language-dataview}
-
-## Segment 5 : Projets & Apps
-
-### 💡 Cette Semaine, J'ai Travaillé Sur
-
-| File | date | status |
-| ---- | ---- | ------ |
+- ``- [📓 Zettelkasten Revisited](https://practicalpkm.ck.page/posts/zettelkasten) ``
+- ``- [Construire un second cerveau](https://c3po.link/QhMR93ec78) ``
+- ``- [Dense Discovery – Issue 298](https://www.densediscovery.com/archive/298/) ``
+- ``- [Fundamentals of Adventure Game Design](\-) ``
+- ``- [Le Cycle de Providence](https://c3po.link/QChtMtXHpT) ``
+- ``- [Stealing Cthulhu](\-) ``
 
 { .block-language-dataview}
 
-### 🖥 Cette Semaine, J'ai testé
+---
+🎧 Cette semaine, j'ai écouté :
 
-| File | rating | review |
-| ---- | ------ | ------ |
+- ``- [Tech Café - [flash ⏱️] Crowdstrike  panne mondiale - Podcast Addict](https://podcastaddict.com/tech-cafe/episode/179578680) ``
+- ``- [Tech Café - La galaxie Samsung - Podcast Addict](https://podcastaddict.com/tech-cafe/episode/179537765) ``
 
 { .block-language-dataview}
 
-## Segment 6 : Jeux
+---
+💡 Cette semaine, j'ai travaillé sur :
 
-### 🎮 Cette Semaine, J'ai Joué
 
-| File                                                                                                            | rating | review                                                                                                                  |
-| --------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce à quoi j'ai joué/A Day in the Office by WinRawr\|A Day in the Office by WinRawr]]               | 🟢     | point and click court sur ordinateur, super j'ai doré, plein de bonnes idées te un style graphique que j'aime beaucoup. |
-| [[Sources/Ce à quoi j'ai joué/The Case of the Golden Idol sur Steam\|The Case of the Golden Idol sur Steam]] | 🟢     | jeu d'enquête que je fais sur mobile vraiment bien fichu et assez dur. J'aime bien                                      |
+{ .block-language-dataview}
+
+---
+🖥 Cette semaine, j'ai testé:
+
+
+{ .block-language-dataview}
+
+---
+🎮 Cette semaine, j'ai joué :
+
+- ``- [A Day in the Office by WinRawr](https://thewinrawr.itch.io/a-day-in-the-office) ``
+- ``- [The Case of the Golden Idol sur Steam](https://store.steampowered.com/app/1677770/The_Case_of_the_Golden_Idol/) ``
 
 { .block-language-dataview}
 
