--- a/src/site/notes/Calendrier/Semaines/2024-30.md
+++ b/src/site/notes/Calendrier/Semaines/2024-30.md
@@ -11,58 +11,72 @@
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
 
-# Sommaire De L'épisode
 
----
-🍿 Cette semaine, j'ai vu :
+## Segment 1 & 2 : Cinéma & Séries TV
 
-- ``- [James chez les bizarroïdes (Série télévisée 2022–2023) ⭐ 6.3  Animation, Aventure, Comédie](https://www.imdb.com/title/tt21107718/?language=fr-fr) ``
-- ``- [Create Pixel Art In Affinity Designer](https://www.youtube.com/watch?v=REeAVe8QWK0) ``
-- ``- [Everything you need to know about Pixel Art!  Pixel Art Tutorial](https://www.youtube.com/watch?v=TD5Rp__T668) ``
-- ``- [Learn Any Pixel Art Style like a Professional Artist - Tips & Tricks](https://www.youtube.com/watch?v=vJgkAve9Wis) ``
-- ``- [Pixel Art Character Design Tutorial - Step By Step!](https://www.youtube.com/watch?v=vXm5VjZA4Ys) ``
-- ``- [Pixel Grid (Affinity Designer)](https://www.youtube.com/watch?v=R457ABIv80U) ``
+### 🍿 Cette Semaine, J'ai Vu
 
-{ .block-language-dataview}
-
----
-📚 Cette semaine, j'ai lu :
-
-- ``- [📓 Zettelkasten Revisited](https://practicalpkm.ck.page/posts/zettelkasten) ``
-- ``- [Construire un second cerveau](https://c3po.link/QhMR93ec78) ``
-- ``- [Dense Discovery – Issue 298](https://www.densediscovery.com/archive/298/) ``
-- ``- [Fundamentals of Adventure Game Design](\-) ``
-- ``- [Le Cycle de Providence](https://c3po.link/QChtMtXHpT) ``
-- ``- [Stealing Cthulhu](\-) ``
+| file.name                                                                                  | rating | source                                                                  |
+| ------------------------------------------------------------------------------------------ | ------ | ----------------------------------------------------------------------- |
+| Create Pixel Art In Affinity Designer                                                      | 🟢     | https://www.youtube.com/watch?v=REeAVe8QWK0                             |
+| Everything you need to know about Pixel Art!  Pixel Art Tutorial                           | 🟢     | https://www.youtube.com/watch?v=TD5Rp__T668                             |
+| Learn Any Pixel Art Style like a Professional Artist - Tips & Tricks                       | 🟢     | https://www.youtube.com/watch?v=vJgkAve9Wis                             |
+| Pixel Art Character Design Tutorial - Step By Step!                                        | 🟢     | https://www.youtube.com/watch?v=vXm5VjZA4Ys                             |
+| Pixel Grid (Affinity Designer)                                                             | 🟢     | https://www.youtube.com/watch?v=R457ABIv80U                             |
+| James chez les bizarroïdes (Série télévisée 2022–2023) ⭐ 6.3  Animation, Aventure, Comédie | 🟡     | <ul><li>https://www.imdb.com/title/tt21107718/?language=fr-fr</li></ul> |
 
 { .block-language-dataview}
 
----
-🎧 Cette semaine, j'ai écouté :
+## Segment 3 : Culture Littéraire & Articles
 
-- ``- [Tech Café - [flash ⏱️] Crowdstrike  panne mondiale - Podcast Addict](https://podcastaddict.com/tech-cafe/episode/179578680) ``
-- ``- [Tech Café - La galaxie Samsung - Podcast Addict](https://podcastaddict.com/tech-cafe/episode/179537765) ``
+### 📚 Cette Semaine, J'ai Lu
 
-{ .block-language-dataview}
-
----
-💡 Cette semaine, j'ai travaillé sur :
-
-
-{ .block-language-dataview}
-
----
-🖥 Cette semaine, j'ai testé:
-
+| file.name                             | rating | source                                          |
+| ------------------------------------- | ------ | ----------------------------------------------- |
+| 📓 Zettelkasten Revisited             | 🟢     | https://practicalpkm.ck.page/posts/zettelkasten |
+| Construire un second cerveau          | 🟢     | <ul><li>https://c3po.link/QhMR93ec78</li></ul>  |
+| Dense Discovery – Issue 298           | 🟢     | https://www.densediscovery.com/archive/298/     |
+| Fundamentals of Adventure Game Design | 🟢     | \-                                              |
+| Le Cycle de Providence                | 🟢     | <ul><li>https://c3po.link/QChtMtXHpT</li></ul>  |
+| Stealing Cthulhu                      | 🟢     | \-                                              |
 
 { .block-language-dataview}
 
----
-🎮 Cette semaine, j'ai joué :
+## Segment 4 : Podcasts Et Musiques
 
-- ``- [A Day in the Office by WinRawr](https://thewinrawr.itch.io/a-day-in-the-office) ``
-- ``- [The Case of the Golden Idol sur Steam](https://store.steampowered.com/app/1677770/The_Case_of_the_Golden_Idol/) ``
+### 🎧 Cette Semaine, J'ai Écouté
+
+| file.name                                                           | rating | source                                                |
+| ------------------------------------------------------------------- | ------ | ----------------------------------------------------- |
+| Tech Café - [flash ⏱️] Crowdstrike  panne mondiale - Podcast Addict | 🟢     | https://podcastaddict.com/tech-cafe/episode/179578680 |
+| Tech Café - La galaxie Samsung - Podcast Addict                     | 🟢     | https://podcastaddict.com/tech-cafe/episode/179537765 |
 
 { .block-language-dataview}
 
+## Segment 5 : Projets & Apps
+
+### 💡 Cette Semaine, J'ai Travaillé Sur
+
+| file.name | rating | source |
+| --------- | ------ | ------ |
+
+{ .block-language-dataview}
+
+### 🖥 Cette Semaine, J'ai testé
+
+| file.name | rating | source |
+| --------- | ------ | ------ |
+
+{ .block-language-dataview}
+
+## Segment 6 : Jeux
+
+### 🎮 Cette Semaine, J'ai Joué
+
+| file.name                             | rating | source                                                                  |
+| ------------------------------------- | ------ | ----------------------------------------------------------------------- |
+| A Day in the Office by WinRawr        | 🟢     | https://thewinrawr.itch.io/a-day-in-the-office                          |
+| The Case of the Golden Idol sur Steam | 🟢     | https://store.steampowered.com/app/1677770/The_Case_of_the_Golden_Idol/ |
+
+{ .block-language-dataview}
 
